--- a/index.html
+++ b/index.html
@@ -56,6 +56,34 @@
                 <button type="button" class="btn btn-primary">Contact Us</button>
             </div>
     </div>
+    <div class="box__div" style="margin: 2rem;">
+        <div class="row">
+            <div class="col-md-3 box__1">
+                <i class="fa fa-building"></i>
+                <h4>Departments</h4>
+                <p>Have a closer look at the departments we offer specialisation in.
+                </p>
+            </div>
+            <div class="col-md-3 box__2">
+                <i class="fa fa-book"></i>
+                <h4>Digital Library</h4>
+                <p>We also have a digital library to facilitate under privilged students.
+                </p>
+            </div>
+            <div class="col-md-3 box__3">
+                <i class="fa fa-graduation-cap"></i>
+                <h4>Scholarships</h4>
+                <p>Scholarships for deserving candidates.
+                </p>
+            </div>
+            <div class="col-md-3 box__4">
+                <i class="fa fa-book"></i>
+                <h4>Sports Club</h4>
+                <p>Extra Curricular activities available on Campus!
+                </p>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
