--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>project7</title>
 </head>
 <body>
+    <!--header-->
     <div class="header">
         <div class="container">
+            <!--header top row-->
             <div class="row top__row" style="padding-top: 10px;">
                 <div class="col-lg-1">
                     <img src="logo.png" height="100px" width="100px" style="padding-bottom: 7px; padding-left: 7px;">
@@ -23,8 +25,11 @@
                     <button type="button" class="btn btn-primary">Apply Now</button>
                 </div>
             </div>
+            <!--header top row end-->
+            <!--header bottom row-->
             <div class="row">
                 <div class="col-md-12">
+                    <!--navbar-->
                     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
@@ -44,10 +49,14 @@
                             </button>
                         </form>
                     </nav>
+                    <!--navbar end-->
                 </div>
             </div>
+            <!--header bottom row end-->
         </div>
     </div>
+    <!--header end-->
+    <!--middle content-->
     <div class="image__div" class="container-fluid">
             <img class="mission" src="mission.jpeg" height="250px" width="250px" style="margin: 100px; margin-right: 50px;" >
             <div class="side__content">
@@ -56,6 +65,8 @@
                 <button type="button" class="btn btn-primary">Contact Us</button>
             </div>
     </div>
+    <!--middle content end-->
+    <!--bottom four boxes-->
     <div class="box__div" style="margin: 2rem;">
         <div class="row">
             <div class="col-md-3 box__1">
@@ -84,6 +95,7 @@
             </div>
         </div>
     </div>
+    <!--bottom four boxes end-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
